# TimeCapsuleSMB

./: .env.example  .gitignore  CONTRIBUTING.md  DETAIL.md  FAQ.md  GUI_ARCH.md  Makefile  README.md  RELEASE.md  SECURITY.md  gui.md  pyproject.toml  requirements.txt  setup.py  tcapsule  todo.md  version.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doctor_failure.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
.kiro/specs/automated-samba-deployment/: requirements.md
Formula/: tcapsule.rb
boot/samba4/: dfree.sh  rc.local  smb.conf.template  start-samba.sh  watchdog.sh
building/: build.sh  build4.sh  hello.sh  install.md
discovery/: __init__.py  discover_timecapsules.py
macos/TimeCapsuleSMB/: Package.swift
macos/TimeCapsuleSMB/tools/: package_app.py
scripts/: bootstrap.sh  bootstrap_host.py  configure.py  deploy.py  discover_timecapsules.py  doctor.py  download.sh  downloadsamba4.sh  env.sh  hello.sh  prep_device.py  samba4-cross-exec.sh  samba4.sh
src/timecapsulesmb/: __init__.py  apple_firmware.py  basebinary.py  configure_defaults.py  flash.py  flash_payloads.py  flash_workflow.py  identity.py  install_validation.py  repair_xattrs.py  telemetry.py
src/timecapsulesmb/app/: __init__.py  confirmations.py  context.py  contracts.py  events.py  helper.py  operations.py  recovery.py  requests.py  service.py  stage_policy.py
src/timecapsulesmb/app/ops/: __init__.py  (+11 more)
src/timecapsulesmb/assets/: __init__.py  artifact-manifest.json
src/timecapsulesmb/checks/: __init__.py  bonjour.py  doctor.py  doctor_debug.py  doctor_state.py  doctor_steps.py  local_tools.py  models.py  nbns.py  network.py  network_plan.py  smb.py  smb_config.py  smb_targets.py
src/timecapsulesmb/cli/: __init__.py  activate.py  api.py  bootstrap.py  configure.py  context.py  deploy.py  discover.py  doctor.py  flash.py  flows.py  fsck.py  main.py  paths.py  prep_device.py  repair_xattrs.py  runtime.py  set_ssh.py  set_telemetry.py  uninstall.py  util.py  validate_install.py  version_check.py
src/timecapsulesmb/core/: __init__.py  config.py  errors.py  messages.py  net.py  paths.py  redaction.py  release.py  smb_config.py  smb_policy.py
src/timecapsulesmb/deploy/: __init__.py  artifact_resolver.py  artifacts.py  auth.py  boot_assets.py  commands.py  dry_run.py  executor.py  planner.py  templates.py  verify.py
src/timecapsulesmb/device/: __init__.py  compat.py  errors.py  mounts.py  probe.py  processes.py  storage.py  util.py
src/timecapsulesmb/discovery/: __init__.py  bonjour.py  devices.py  native_dns_sd.py
src/timecapsulesmb/integrations/: __init__.py  acp.py  airpyrt.py
src/timecapsulesmb/services/: __init__.py  acp_ssh.py  activation.py  app.py  callbacks.py  config_store.py  configure.py  configure_target.py  context.py  credentials.py  deploy.py  doctor.py  flash.py  maintenance.py  reachability.py  reboot.py  repair_xattrs.py  runtime.py  runtime_verification.py  set_ssh.py  ssh_access.py  storage.py  version_check.py
src/timecapsulesmb/telemetry/: __init__.py  debug.py  execution.py  operation.py
src/timecapsulesmb/transport/: __init__.py  errors.py  local.py  ssh.py
ssh/: __init__.py  common.py  disable_ssh.py  enable_ssh.py
tests/: conftest.py  run_parallel.py  storage_fixtures.py  test_acp.py  test_airpyrt.py  test_app_api.py  test_app_deploy_reboot.py  test_app_recovery.py  test_apple_firmware.py  test_artifact_resolver.py  test_artifacts.py  test_basebinary.py  test_build_rsync.py  test_build_samba4x.py  test_checks.py  test_cli.py  test_cli_context.py  test_cli_flows.py  test_cli_progress.py  test_compat.py  test_config.py  test_configure_defaults.py  test_configure_service.py  test_configure_target.py  test_core_errors.py  test_deploy_modules.py  test_discovery.py  test_discovery_devices.py  test_doctor_helpers.py  test_flash.py  test_flash_workflow.py  test_identity.py  test_import_boundaries.py  test_launcher.py  test_macos_package_app.py  test_mdns_build.py  test_multivolume_deploy.py  test_native_dns_sd.py  test_nbns_build.py  test_net.py  (+20 more)
(+242 files in other folders)
