[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timecapsulesmb"
version = "0.1.0"
description = "Deploy modern Samba to Apple AirPort Time Capsules."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ifaddr>=0.2.0",
  "pexpect>=4.9.0",
  "zeroconf>=0.132.2",
]

[project.scripts]
tcapsule = "timecapsulesmb.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
timecapsulesmb = [
  "assets/artifact-manifest.json",
  "assets/boot/samba4/*",
]

[tool.setuptools.packages.find]
where = ["src"]
