[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timecapsulesmb"
version = "2.1.1"
description = "Deploy modern Samba to Apple AirPort Time Capsules."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "ifaddr>=0.2.0",
  "pexpect>=4.9.0",
  "pycryptodome>=3.20.0,<4",
  "zopfli>=0.2.3.post1",
  "zeroconf>=0.132.2",
]

[project.scripts]
tcapsule = "timecapsulesmb.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
timecapsulesmb = [
  "assets/artifact-manifest.json",
  "assets/boot/samba4/*",
  "assets/boot/samba4/common.d/*",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["src/timecapsulesmb"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-ra"
