[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timecapsulesmb"
version = "2.2.9"
description = "Deploy modern Samba to Apple AirPort Time Capsules."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "James Chang" },
]
keywords = [
  "airport-time-capsule",
  "bonjour",
  "macos",
  "netbsd",
  "samba",
  "smb",
  "time-machine",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: System :: Networking",
]
dependencies = [
  "ifaddr>=0.2.0",
  "pexpect>=4.9.0",
  "pycryptodome>=3.20.0,<4",
  "zopfli>=0.2.3.post1",
  "zeroconf>=0.132.2",
]

[project.urls]
Homepage = "https://github.com/jamesyc/TimeCapsuleSMB"
Documentation = "https://github.com/jamesyc/TimeCapsuleSMB#readme"
FAQ = "https://github.com/jamesyc/TimeCapsuleSMB/blob/main/FAQ.md"
Issues = "https://github.com/jamesyc/TimeCapsuleSMB/issues"
Releases = "https://github.com/jamesyc/TimeCapsuleSMB/releases"
Source = "https://github.com/jamesyc/TimeCapsuleSMB"

[project.optional-dependencies]
dev = [
  "coverage>=7.6.0",
  "pytest>=8.4.0,<10",
  "pytest-xdist>=3.6.1,<4",
  "ruff>=0.12.0,<1",
]

[project.scripts]
tcapsule = "timecapsulesmb.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
timecapsulesmb = [
  "assets/artifact-manifest.json",
  "assets/boot/samba4/*",
  "assets/boot/samba4/common.d/*",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["src/timecapsulesmb"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-ra"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "E9",
  "F63",
  "F7",
  "F82",
]
